# skii-school-platform

./: .gitignore  LICENSE  MANIFEST.in  Makefile  Makefile_devtools  README.md  pyproject.toml  pyrightconfig.json  setup.cfg
apps/account/: api.py
apps/account/utils/: email.py
apps/doc/: apps.py
apps/skii_school_core/: admin.py  api.py  apps.py  entities.py  factories.py  forms.py  interfaces.py  models.py  routers.py  schemas.py  urls.py
apps/skii_school_core/migrations/: 0001_initial.py  0002_geocoordinate_visualalbum_visualpicture_and_more.py  0002_rename_values_currencyressource_factor_and_more.py  0003_remove_companyagent_user.py  0004_alter_event_start_alter_event_stop.py  0005_alter_event_start_alter_event_stop.py
docsite/src/: conf.ts
frontend/src/: App.vue  interfaces.ts  router.ts
main/: urls.py
main/settings/: dev.py  dev.py.orig  local.py  settings.py  testing.py
requirements/: base.txt  dev.txt
skii/: __init__.py
skii/endpoint/: api.py  apps.py  filters.py  utils.py
skii/gateway/: api.py  apps.py
skii/platform/: admin.py  apps.py  constants.py  controllers.py  entities.py  forms.py  interfaces.py
tests/: conftest.py  test_ninja_api.py  test_testcase.py  testcase.py
tests/account/: __init__.py  test_api.py  test_utils.py
tests/endpoint/: test_api.py  test_api_agenda.py  test_api_controller.py  test_api_rest.py  test_api_services.py  test_skii_api_testcase.py
tests/platform/: test_api.py  test_controllers.py  test_date_range.py  test_models.py
tests/skii_school_platform/: test_api.py
tools/: update_license.sh
(+78 files in other folders)
