[project]
name = "skii"
version = "0.3.0"
description = "Skii Platform"
license = {file = "LICENSE"}
requires-python = ">=3.9"
optional-dependencies = {front = ["yarn"]}

[options]
include_package_data = true
zip_safe = false

[tool.setuptools]
packages = ["main", "apps", "skii"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


