[project]
name = "skii"
version = "0.4.1"
description = "Skii Platform"
license = {file = "LICENSE"}
requires-python = ">=3.11"

[options]
include_package_data = true
zip_safe = false

[tool.setuptools]
packages = ["main", "apps", "skii"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


